--- a/extensions/resources/package.json
+++ b/extensions/resources/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.resources",
-  "version": "0.1.0",
+  "version": "0.1.1-dev.2",
   "description": "Toa Resources Extension",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
