--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/core",
-  "version": "0.1.0",
+  "version": "0.1.1-dev.2",
   "description": "Toa Core",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@rsql/parser": "1.2.4",
-    "@toa.io/gears": "0.1.0",
-    "@toa.io/schema": "0.1.0",
+    "@toa.io/gears": "0.1.1-dev.2",
+    "@toa.io/schema": "0.1.1-dev.2",
     "clone-deep": "4.0.1"
   },
   "gitHead": "453937d5174bac66b3152cda8ed0cf1ed4fab5f9"
