--- a/runtime/operations/package.json
+++ b/runtime/operations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/operations",
-  "version": "0.1.0",
+  "version": "0.1.1-dev.2",
   "description": "Toa Deployment",
   "homepage": "https://toa.io",
   "author": {
