--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -15,6 +15,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "bin": {
+    "toa": "bin/cli"
+  },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
