refactor: remove TOA_ENV

--- a/integration/context/credits/Dockerfile
+++ b/integration/context/credits/Dockerfile
@@ -1,10 +1,8 @@
 FROM node:alpine
 
-# WORKDIR /toa
-# ADD ./../../../ .
-# RUN npm link --workspaces
+RUN npm i -g @toa.io/runtime@rt
 
 WORKDIR /app
 ADD . .
 
-CMD exec /bin/sh -c "trap : TERM INT; sleep infinity & wait"
+CMD toa compose .
