--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "engines": {
     "node": ">= 12.0.0"
   },
+  "bin": {
+    "toa": "runtime/runtime/bin/toa"
+  },
   "devDependencies": {
     "@babel/eslint-parser": "7.16.0",
     "@commitlint/cli": "14.1.0",
@@ -39,12 +42,15 @@
     "standard": "16.0.4"
   },
   "scripts": {
-    "dev": "docker compose up -d",
     "test": "standard --verbose | snazzy && npm run test:unit",
     "test:unit": "jest --roots runtime connectors extensions",
     "test:integration": "jest --roots integration --runInBand",
     "lint": "standard --verbose --fix | snazzy",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
+    "setup": "npm run cluster && toa deploy ./integration/context",
+    "connect": "telepresence quit && telepresence connect && telepresence intercept -l dev",
+    "dev": "npm run setup && npm run connect"
   },
   "standard": {
     "parser": "@babel/eslint-parser",
