refactor(operations): add deployment tests

--- a/runtime/operations/package.json
+++ b/runtime/operations/package.json
@@ -26,6 +26,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@toa.io/gears": "0.2.0-dev.0",
     "execa": "5.1.1"
   }
 }
