feat(operations): add docker images build & push operation

--- a/runtime/package/src/manifest/schema.yaml
+++ b/runtime/package/src/manifest/schema.yaml
@@ -38,6 +38,9 @@ properties:
   name:
     $ref: 'definitions#/definitions/token'
 
+  version:
+    $ref: 'definitions#/definitions/version'
+
   entity:
     type: object
     properties:
