--- a/integration/context/context.toa.yaml
+++ b/integration/context/context.toa.yaml
@@ -1,5 +1,6 @@
-runtime: 0.1.1-dev.3
 name: dummies
 description: Integration tests context
 version: 0.0.0
+runtime: .
 packages: '*'
+registry: localhost:5000
