--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,3 @@
-// have no idea how to make standardjs work without this file
+// have no idea how to get standardjs to work without this file
 {
 }
