--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -24,13 +24,15 @@
   "dependencies": {
     "@toa.io/bindings.amqp": "0.2.0-dev.1",
     "@toa.io/bindings.http": "0.2.0-dev.1",
+    "@toa.io/bindings.loop": "0.2.0-dev.1",
     "@toa.io/boot": "0.2.0-dev.3",
     "@toa.io/bridges.node": "0.2.0-dev.0",
     "@toa.io/cli": "0.2.0-dev.3",
     "@toa.io/core": "0.2.0-dev.3",
     "@toa.io/extensions.resources": "0.2.0-dev.1",
     "@toa.io/operations": "0.2.0-dev.3",
-    "@toa.io/package": "0.2.0-dev.2",
+    "@toa.io/package": "0.2.0-dev.3",
+    "@toa.io/schema": "0.2.0-dev.3",
     "@toa.io/storages.mongodb": "0.2.0-dev.1"
   }
 }
