--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+//localhost:4873/:_authToken=${NPM_TOKEN}
 fund=false
 audit=false
 sign-git-commit=true
