--- a/runtime/schema/package.json
+++ b/runtime/schema/package.json
@@ -13,7 +13,8 @@
   },
   "main": "src/schema.js",
   "dependencies": {
-    "ajv": "8.6.3"
+    "ajv": "8.6.3",
+    "ajv-formats": "2.1.1"
   },
   "publishConfig": {
     "access": "public"
