feat(operations): add npm proxy option

--- a/integration/context/context.toa.yaml
+++ b/integration/context/context.toa.yaml
@@ -1,7 +1,10 @@
 name: dummies
 description: Integration tests context
 version: 0.0.0
-runtime: .
+runtime:
+  version: .
+  registry: http://host.docker.internal:4873
+  proxy: http://host.docker.internal:4873
 packages: '*'
 registry: localhost:5000
 
