--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test:unit": "npx jest --roots runtime connectors extensions",
     "test:integration": "npx jest --roots integration --runInBand",
     "lint": "npx standard --verbose --fix | npx snazzy",
-    "publish:local": "npx lerna publish --conventional-prerelease --preid dev --dist-tag dev --no-git-tag-version --no-changelog --registry http://localhost:4873 --yes",
+    "publish:local": "npx lerna publish --conventional-prerelease --preid dev --dist-tag dev --no-changelog --registry http://localhost:4873 --yes",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "registry": "docker run --name verdaccio -p 4873:4873 -d --rm verdaccio/verdaccio && sleep 3 && npm adduser --registry http://localhost:4873",
     "setup": "npm run registry && npm run cluster && toa deploy ./integration/context",
