--- a/extensions/resources/package.json
+++ b/extensions/resources/package.json
@@ -20,6 +20,8 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@toa.io/core": "0.2.0-dev.12",
+    "@toa.io/gears": "0.2.0-dev.12",
     "express": "4.17.1",
     "path-to-regexp": "6.2.0"
   },
