--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "lint": "npx standard --verbose --fix | npx snazzy",
     "publish:local": "npx lerna publish --conventional-prerelease --preid dev --dist-tag dev --no-changelog --registry http://localhost:4873 --yes",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
-    "registry": "docker run --name verdaccio -p 4873:4873 -d --rm verdaccio/verdaccio && sleep 3 && npm adduser --registry http://localhost:4873",
-    "setup": "npm run registry && npm run cluster && toa deploy ./integration/context",
+    "registry": "docker run --name verdaccio -p 4873:4873 -d --rm verdaccio/verdaccio && sleep 5 && npm adduser --registry http://localhost:4873",
+    "setup": "npm run registry && npm run cluster && npm run publish:local && toa deploy ./integration/context",
     "connect": "telepresence quit && telepresence connect && telepresence intercept -l dev",
     "dev": "npm run setup && npm run connect"
   },
