--- a/integration/context/context.toa.yaml
+++ b/integration/context/context.toa.yaml
@@ -5,7 +5,7 @@ runtime:
   registry: http://host.docker.internal:4873
   proxy: http://host.docker.internal:4873
 packages: '*'
-registry: localhost:5000
+registry: 153896708942.dkr.ecr.eu-west-1.amazonaws.com
 
 compositions:
   - name: messages
