--- a/runtime/operations/package.json
+++ b/runtime/operations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/operations",
-  "version": "0.2.0-dev.30",
+  "version": "0.2.0-dev.36",
   "description": "Toa Deployment",
   "homepage": "https://toa.io",
   "author": {
@@ -29,8 +29,7 @@
     "@toa.io/gears": "*"
   },
   "dependencies": {
-    "execa": "5.1.1",
-    "ora": "5.4.1"
+    "execa": "5.1.1"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
