--- a/runtime/formation/package.json
+++ b/runtime/formation/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/toa-io/toa/issues"
   },
   "main": "src/index.js",
+  "types": "types/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
