fix(core): remove connector dependency type tolerance

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,7 @@ services:
     image: mongo:5.0.8
     ports:
       - '27017:27017'
+  verdaccio:
+    image: verdaccio/verdaccio:5.10.2
+    ports:
+      - '4873:4873'
