--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "workspaces": [
     "runtime/*",
     "connectors/*",
-    "extensions/*"
+    "extensions/*",
+    "operations"
   ],
   "engines": {
     "node": ">= 12.0.0"
