refactor(prototype): remove id from input/output schemas

--- a/runtime/prototype/manifest.toa.yaml
+++ b/runtime/prototype/manifest.toa.yaml
@@ -16,10 +16,8 @@ operations:
   transit:
     virtual: true
     input: object
-    output:
-      id: ~
+    output: object
   observe:
-    output:
-      id: ~
+    output: object
   assign:
     input: object
