fix(resources): fix short resource declaration
close #110

--- a/integration/context/credits/manifest.toa.yaml
+++ b/integration/context/credits/manifest.toa.yaml
@@ -45,7 +45,5 @@ operations:
 
 extensions:
   '@toa.io/extensions.resources':
-    /:
-      operations: [add]
-    /:id:
-      operations: [observe, set]
+    /: [add]
+    /:id: [observe, set]
