--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -18,6 +18,9 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "peerDependencies": {
+    "@toa.io/formation": "*"
+  },
   "dependencies": {
     "clone-deep": "4.0.1"
   },
