--- a/integration/context/context.toa.yaml
+++ b/integration/context/context.toa.yaml
@@ -1,11 +1,14 @@
 name: dummies
 description: Integration tests dummies context
 version: 0.0.0
+packages: '*'
 runtime:
   registry: http://host.docker.internal:4873
   proxy: http://host.docker.internal:4873
-packages: '*'
-registry: 153896708942.dkr.ecr.eu-west-1.amazonaws.com
+registry:
+  base: 153896708942.dkr.ecr.eu-west-1.amazonaws.com
+  base@dev: localhost:5000
+  platforms@dev: ~
 compositions:
   - name: messages
     components:
@@ -14,8 +17,13 @@ compositions:
 resources:
   host: dummies.toa.dev
   host@staging: dummies.stage.toa.dev
+  host@dev: ~
+
   class: alb
+  class@dev: ~
+
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
+  annotations@dev: ~
