--- a/integration/context/context.toa.yaml
+++ b/integration/context/context.toa.yaml
@@ -19,3 +19,5 @@ resources:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
+origins:
+  local: localhost:80
