feat(operations): add runtime environments

--- a/operations/src/deployment/chart/templates/compositions.yaml
+++ b/operations/src/deployment/chart/templates/compositions.yaml
@@ -19,5 +19,8 @@ spec:
       containers:
         - name: {{ .name }}
           image: {{ .image }}
+          env:
+            - name: TOA_ENV
+              value: {{ $.Values.environment }}
 ---
 {{- end }}
