--- a/operations/src/deployment/chart/values.yaml
+++ b/operations/src/deployment/chart/values.yaml
@@ -28,4 +28,4 @@ services:
         alb.ingress.kubernetes.io/scheme: internet-facing
         alb.ingress.kubernetes.io/target-type: ip
         alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
-
+environment: development
