--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.origins",
-  "version": "0.2.0-dev.40",
+  "version": "0.2.0-dev.42",
   "description": "Toa operations context HTTP client",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,9 +19,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "peerDependencies": {
+    "@toa.io/core": "*",
     "@toa.io/gears": "*",
-    "@toa.io/schema": "*",
-    "@toa.io/core": "*"
+    "@toa.io/schema": "*"
   },
   "dependencies": {
     "node-fetch": "2.6.7"
