refactor(formation): cleanup component references resolution

--- a/integration/dummies/origins/manifest.toa.yaml
+++ b/integration/dummies/origins/manifest.toa.yaml
@@ -10,14 +10,14 @@ entity:
     bar: string
 
 operations:
-  read:
+  foo:
     concurrency: retry
     input:
       delay: number
     output:
       status: number
       text: string
-  fetch:
+  bar:
     concurrency: retry
     output:
       status: number
