feat: add external storages

--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -18,6 +18,10 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "peerDependencies": {
+    "@toa.io/gears": "*",
+    "@toa.io/schema": "*"
+  },
   "dependencies": {
     "mongodb": "4.1.4"
   },
