--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "execa": "5.1.1",
     "husky": "7.0.4",
     "jest": "27.3.1",
-    "lerna": "4.0.0",
     "node-fetch": "2.6.7",
     "randomstring": "1.2.1",
     "snazzy": "9.0.0",
@@ -50,7 +49,7 @@
     "test:integration": "npx jest --roots integration --runInBand",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
-    "publish:local": "npx lerna version --conventional-prerelease --preid dev --force-publish --no-git-tag-version --no-push --no-changelog --yes && npm publish --workspaces",
+    "publish:local": "npx --yes lerna version --conventional-prerelease --preid dev --force-publish --no-git-tag-version --no-push --no-changelog --yes && npm publish --workspaces",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "registry:login": "aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 153896708942.dkr.ecr.eu-west-1.amazonaws.com",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
