fix(integration): add schema to dummy origins

--- a/integration/dummies/env/manifest.toa.yaml
+++ b/integration/dummies/env/manifest.toa.yaml
@@ -10,5 +10,5 @@ entity:
     required: [length]
 
 origins:
-  foo: production
-  foo@integration: test
+  foo: https://production
+  foo@integration: http://test
