--- a/integration/context/stats/manifest.toa.yaml
+++ b/integration/context/stats/manifest.toa.yaml
@@ -20,5 +20,5 @@ receivers:
   messages.messages.created: update
   credits.balance.updated: update
 
-resources:
+exposition:
   /:id: [observe, update]
