--- a/integration/dummies/a/manifest.toa.yaml
+++ b/integration/dummies/a/manifest.toa.yaml
@@ -26,7 +26,7 @@ receivers:
   messages.messages.created: transit
 
 extensions:
-  resources:
+  exposition:
     /:
       operations: [create]
     /:id:
