--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -30,7 +30,7 @@
     "@toa.io/cli": "0.2.0-dev.52",
     "@toa.io/core": "0.2.0-dev.52",
     "@toa.io/extensions.origins": "0.2.0-dev.52",
-    "@toa.io/extensions.resources": "0.2.0-dev.52",
+    "@toa.io/extensions.exposition": "0.2.0-dev.52",
     "@toa.io/formation": "0.2.0-dev.52",
     "@toa.io/gears": "0.2.0-dev.52",
     "@toa.io/operations": "0.2.0-dev.52",
