refactor(cli): add support for known services

--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -19,7 +19,8 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "peerDependencies": {
-    "@toa.io/gears": "*"
+    "@toa.io/gears": "*",
+    "@toa.io/formation": "*"
   },
   "dependencies": {
     "find-up": "5.0.0",
