feat(cli): add export artifacts' aliases

--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -20,7 +20,8 @@
   },
   "peerDependencies": {
     "@toa.io/formation": "*",
-    "@toa.io/gears": "*"
+    "@toa.io/gears": "*",
+    "@toa.io/runtime": "*"
   },
   "dependencies": {
     "find-up": "5.0.0",
