fix: add operations to jest roots

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prepare": "npx husky install",
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "npx standard --verbose | npx snazzy",
-    "test:unit": "npx jest --roots runtime connectors extensions",
+    "test:unit": "npx jest",
     "test:integration": "npx jest --roots integration --runInBand",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
@@ -68,7 +68,7 @@
       "<rootDir>/runtime",
       "<rootDir>/connectors",
       "<rootDir>/extensions",
-      "<rootDir>/integration"
+      "<rootDir>/operations"
     ],
     "testMatch": [
       "**/?(*.)+(test).js"
